gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail5953s2.d
version https://git-lfs.github.com/spec/v1
oid sha256:e2952f401293313982852747892cda1858b1524524762ca111d39fce09bb651a
size 314
